--- a/src/main/webapp/WEB-INF/views/thymeleaf/recetas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/recetas.html
@@ -41,10 +41,10 @@
 </div>
 
 <div class="container-fluid my-5" style="min-height: 60vh;">
-    <div class="row " style="padding-left: 80px;">
+    <div class="row " style="padding-left: 110px;">
         <div th:each="receta : ${recetas}" class="col-md-4 mb-4">
             <div class="card">
-                <img th:src="@{/img/{receta.imagen}(receta.imagen=${receta.imagen})}" class="card-img-top w-50 mx-auto d-block"  alt="receta" >
+                <img th:src="@{'/img/recetas/' + ${receta.imagen}}" class="card-img-top w-50 mx-auto d-block"  alt="receta" >
                 <div class="card-body">
                     <h5 class="card-title">
                         <a th:href="@{/recetas/{id}(id=${receta.id})}" th:text="${receta.nombre}"></a>
