--- a/src/main/webapp/WEB-INF/views/thymeleaf/formulario-registro.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/formulario-registro.html
@@ -72,7 +72,8 @@
             </div>
             <div class="form-group">
                 <label for="meta_alcanzar">¿Cuál es su meta a alcanzar</label><br>
-                   <label for="meta_alcanzar" th:field="*{metaAlcanzarPeso}">Peso Actual:</label><br>
+                 <input type="number" class="form-control" id="peso" th:field="*{metaAlcanzarPeso}" required> kg
+
             </div>
             <div class="form-group">
                 <label for="altura">Altura:</label><br>
