--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfilUsuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfilUsuario.html
@@ -47,7 +47,7 @@
     </div>
 
     <!--perfil-->
-    <div class="container my-5"> 
+    <div class="container my-5" style="min-height: 60vh;">
         <div class="row d-flex align-items-center">
             <div class="col-sm-3 d-flex flex-column justify-content-center my-3">
                 <h3 class="text-center text-dark">Mi Avatar</h3>
