--- a/src/main/webapp/WEB-INF/views/thymeleaf/calendarioDieta.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/calendarioDieta.html
@@ -27,7 +27,7 @@
                 <div class="card bg-light mb-3">
                     <div class="card-body">
                         <h5 class="card-title">¿Cuánto pesas el día de hoy?</h5>
-                        <form th:action="@{}" method="post">
+                        <form th:action="@{#}" method="post">
                             <div class="form-group">
                                 <label for="nuevoPeso">Peso:</label>
                                 <div class="input-group">
