--- a/src/main/webapp/WEB-INF/views/thymeleaf/descripcionRecetas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/descripcionRecetas.html
@@ -36,7 +36,7 @@
         <div class="row">
             <div class="col-md-12">
                 <h2 th:text="${receta.nombre}"></h2>
-                </div>
+            </div>
         </div>
         <div class="row">
             <div class="col-md-8">
@@ -47,6 +47,11 @@
             </div>
             <div class="col-md-4">
                 <img th:src="@{'/img/recetas/' + ${receta.imagen}}" class="img-fluid" alt="receta">
+                <span>Alimentos relacionados con esta receta</span>
+                <br>
+                <div th:each="alimento : ${alimentos}">
+                    <a th:href="@{/alimentos/{id}(id=${alimento.id})}" th:text="${alimento.nombre}"></a>
+                </div>
             </div>
         </div>
     </div>
