--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -9,79 +9,11 @@
     <link rel="stylesheet" th:href="@{/css/main.css}"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-  <style>
-            .card-container {
-                  display: flex;
-                  justify-content: space-around;
-                  flex-wrap: wrap;
-                  gap: 20px;
-                  margin-top: 20px;
-              }
 
-              .card {
-                  position: relative;
-                  width: 300px;
-                  height: 200px;
-                  overflow: hidden;
-                  border-radius: 10px;
-                  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-                  transition: transform 0.3s;
-
-              }
-
-              .card img {
-                  width: 100%;
-                  height: 100%;
-                  object-fit: cover;
-                  transition: opacity 0.3s;
-              }
-
-              .card-text {
-                  position: absolute;
-                  top: 50%;
-                  left: 50%;
-                  transform: translate(-50%, -50%);
-                  color: black;
-                  font-size: 1.5em;
-                  font-weight: bold;
-                  text-align: center;
-                  opacity: 0;
-                  transition: opacity 0.3s, transform 0.3s;
-              }
-
-              .card:hover {
-                  transform: scale(1.05);
-              }
-
-              .card:hover img {
-                  opacity: 0.3;
-              }
-
-              .card:hover .card-text {
-                  opacity: 1;
-                  transform: translate(-50%, -50%) scale(1.2);
-              }
-
-              .section-title {
-                  text-align: center;
-                  margin-top: 40px;
-                  font-size: 2em;
-                  font-weight: bold;
-              }
-
-              .card a {
-                  display: block;
-                  height: 100%;
-                  width: 100%;
-                  color: inherit;
-                  text-decoration: none;
-              }
-          </style>
-      </head>
       <body>
           <nav th:replace="navbar :: navbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top"></nav>
 
-          <div class="container">
+          <div class="container" style="min-height: 80vh;">
               <h2 class="section-title">Opciones del Menú</h2>
               <div class="card-container">
                   <div class="card">
@@ -122,3 +54,71 @@
           <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
       </body>
       </html>
+<style>
+    .card-container {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        gap: 20px;
+        margin-top: 20px;
+    }
+
+    .card {
+        position: relative;
+        width: 300px;
+        height: 200px;
+        overflow: hidden;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s;
+
+    }
+
+    .card img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: opacity 0.3s;
+    }
+
+    .card-text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: black;
+        font-size: 1.5em;
+        font-weight: bold;
+        text-align: center;
+        opacity: 0;
+        transition: opacity 0.3s, transform 0.3s;
+    }
+
+    .card:hover {
+        transform: scale(1.05);
+    }
+
+    .card:hover img {
+        opacity: 0.3;
+    }
+
+    .card:hover .card-text {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1.2);
+    }
+
+    .section-title {
+        text-align: center;
+        margin-top: 40px;
+        font-size: 2em;
+        font-weight: bold;
+    }
+
+    .card a {
+        display: block;
+        height: 100%;
+        width: 100%;
+        color: inherit;
+        text-decoration: none;
+    }
+</style>
