--- a/src/main/webapp/WEB-INF/views/thymeleaf/navbar.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/navbar.html
@@ -20,17 +20,17 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" >Datos Usuario</a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" th:href="@{perfilUsuario}">Perfil</a></li>
-                        <li><a class="dropdown-item" th:href="@{configuracion}">Configuracion</a></li>
-                        <li><a class="dropdown-item" th:href="@{notificaciones}">Notificaciones</a></li>
+                        <li><a class="dropdown-item" th:href="@{/perfilUsuario}">Perfil</a></li>
+                        <li><a class="dropdown-item" th:href="@{/configuracion}">Configuracion</a></li>
+                        <li><a class="dropdown-item" th:href="@{/notificaciones}">Notificaciones</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Mi Calendario</a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" th:href="@{calendarioDieta}">Dieta</a></li>
-                        <li><a class="dropdown-item" th:href="@{alimentos}">Alimentacion</a></li>
-                        <li><a class="dropdown-item" th:href="@{ejercicio}">Ejercicios</a></li>
+                        <li><a class="dropdown-item" th:href="@{/calendarioDieta}">Dieta</a></li>
+                        <li><a class="dropdown-item" th:href="@{/diarioAlimentos}">Alimentacion</a></li>
+                        <li><a class="dropdown-item" th:href="@{/diarioEjercicio}">Ejercicios</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
