--- a/src/main/webapp/WEB-INF/views/thymeleaf/alimentos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/alimentos.html
@@ -23,6 +23,7 @@
     <div class="row justify-content-center">
         <div class="col-md-12">
             <div class="list-group flex-row justify-content-center">
+                <a th:href="@{/home}" class="list-group-item list-group-item-action ">MI FATLOSS</a>
                 <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action activo">ALIMENTOS</a>
                 <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
                 <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
