--- a/src/main/webapp/WEB-INF/views/thymeleaf/calendarioDieta.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/calendarioDieta.html
@@ -19,7 +19,20 @@
 </head>
 <body>
     <div th:replace="navbar :: navbar"></div>
-    <div class="container mt-5">
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12">
+                <div class="list-group flex-row justify-content-center">
+                    <a th:href="@{/home}" class="list-group-item list-group-item-action activo">MI FATLOSS</a>
+                    <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action ">ALIMENTOS</a>
+                    <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
+                    <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="container mt-5">
         <h2>Calendario de Mi Dieta - Descripción General</h2>
         <div class="row">
             <!-- Columna para el cuadro de ingreso de peso -->
