--- a/src/main/webapp/WEB-INF/views/thymeleaf/notificaciones.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/notificaciones.html
@@ -34,14 +34,17 @@
         </div>
         <div class="d-flex flex-column justify-content-center mx-5 my-3">
             <div class="alert alert-success alert-dismissible fade show" th:each="notificacion : ${notificaciones}">
-                <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-                <strong th:text="${notificacion.key}"></strong>: <span th:text="${notificacion.value}"></span>
+                <form th:action="@{/eliminarNotificacion}" method="post">
+                    <input type="hidden" th:name="'idNotificacion'" th:value="${notificacion.id}">
+                    <button type="submit" class="btn-close" data-bs-dismiss="alert"></button>
+                    <strong th:text="${notificacion.titulo}"></strong>: <span th:text="${notificacion.contenido}"></span>
+                </form>
             </div>
         </div>
     </div>
 
     <!--footer-->
-    <div th:replace="footer ::footer"></div>
+    <div th:replace="footer :: footer"></div>
 
 </body>
 </html>
