--- a/src/main/webapp/WEB-INF/views/thymeleaf/diarioAlimentos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/diarioAlimentos.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
     <link rel="stylesheet" th:href="@{/css/main.css}"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <script>
+    function toggleForm(colacionId) {
+    var form = document.getElementById("agregarAlimento-" + colacionId);
+    if (form.style.display === "none") {
+    form.style.display = "block";
+    } else {
+    form.style.display = "none";
+    }
+    }
+    </script>
 </head>
 <body>
 <div th:replace="navbar :: navbar"></div>
@@ -26,55 +35,20 @@
 
 <div class="container mt-4" style="min-height: 80vh;">
     <h1 class="text-center m-5">Mi diario de comida</h1>
-    <div class="row">
-        <!-- Columna para los contenedores de Desayuno, Almuerzo, etc. -->
-        <div class="col-md-6">
-            <!-- Desayuno -->
-            <div class="row mb-3">
-                <div class="col-md-12">
-                    <div class="card">
-                        <div class="card-body d-flex justify-content-between align-items-center">
-                            <h5 class="card-title m-0">Desayuno</h5>
-                            <button class="btn btn-success" type="button" id="button-addon2">+</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Almuerzo -->
-            <div class="row mb-3">
-                <div class="col-md-12">
-                    <div class="card">
-                        <div class="card-body d-flex justify-content-between align-items-center">
-                            <h5 class="card-title m-0">Almuerzo</h5>
-                            <button class="btn btn-success" type="button" id="button-addon3">+</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Cena -->
-            <div class="row mb-3">
-                <div class="col-md-12">
-                    <div class="card">
-                        <div class="card-body d-flex justify-content-between align-items-center">
-                            <h5 class="card-title m-0">Cena</h5>
-                            <button class="btn btn-success" type="button" id="button-addon4">+</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Pasa Bocas / Otros -->
-            <div class="row mb-3">
-                <div class="col-md-12">
-                    <div class="card">
-                        <div class="card-body d-flex justify-content-between align-items-center">
-                            <h5 class="card-title m-0">Pasa Bocas / Otros</h5>
-                            <button class="btn btn-success" type="button" id="button-addon5">+</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Columna para la ingesta diaria recomendada -->
+    <div th:each="colacion : ${colaciones}">
+        <h2 th:text="${colacion.nombre}">Nombre de la Colación</h2>
+        <ul>
+            <li th:each="alimento : ${colacion.alimentos}" th:text="${alimento.nombre}">Nombre del Alimento</li>
+        </ul>
+
+        <form th:action="@{/diarioAlimentos/agregarAlimentos}" method="post">
+            <input type="hidden" name="colacionId" th:value="${colacion.id}" />
+            <select multiple name="alimentoIds">
+                <option th:each="alimento : ${alimentos}" th:value="${alimento.id}" th:text="${alimento.nombre}">Alimento</option>
+            </select>
+            <button type="submit">Agregar Alimentos</button>
+        </form>
+    </div>
         <div class="col-md-6">
             <div class="card border-0">
                 <div class="card-body">
