--- a/src/main/webapp/WEB-INF/views/thymeleaf/formulario-registro.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/formulario-registro.html
@@ -102,11 +102,11 @@
                         </div>  
                     </div>
                     <div class="d-flex flex-column justify-content-center m-3">
-                        <div th:each="error : ${errores}" class="alert alert-danger alert-dismissible fade show">
+                        <div class="alert alert-danger alert-dismissible fade show" th:if="${error != null}">
                             <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
                             <strong>Error: </strong><span th:text="${error}"></span>
                         </div>
-                    </div>     
+                    </div>
                 </form>
             </div>
         </div>
