--- a/src/main/webapp/WEB-INF/views/thymeleaf/recetas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/recetas.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/main.css}">
 
-    <!--bootstrap-->
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -45,7 +45,10 @@
     <div class="row " style="padding-left: 110px;">
         <div th:each="receta : ${recetas}" class="col-md-4 mb-4">
             <div class="card">
-                <img th:src="@{'/img/recetas/' + ${receta.imagen}}" class="card-img-top w-50 mx-auto d-block"  alt="receta" >
+                <a th:href="@{/agregarAFavoritos/{id}(id=${receta.id})}">
+                    <img th:src="@{'/img/iconoFavoritos.png'}" class="icono-favoritos" alt="estrella receta">
+                </a>
+                <img th:src="@{'/img/recetas/' + ${receta.imagen}}" class="card-img-top" alt="receta">
                 <div class="card-body">
                     <h5 class="card-title">
                         <a th:href="@{/recetas/{id}(id=${receta.id})}" th:text="${receta.nombre}"></a>
@@ -57,7 +60,6 @@
     </div>
 </div>
 
-
 <div th:replace="footer :: footer"></div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -65,10 +67,28 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </body>
-</html>
 <style>
     .card {
         width: 24rem; /* Ajusta el ancho de la tarjeta */
         height: auto; /* Ajusta la altura de la tarjeta */
     }
+    .imagen-receta-container {
+        position: relative;
+    }
+
+    .icono-favoritos {
+        background-color: white;
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 30px; /* Ajusta el tamaño según sea necesario */
+        z-index: 1; /* Asegura que el ícono esté por encima de la imagen de la receta */
+    }
+    .card-img-top {
+        position: relative; /* Agrega esta línea */
+        max-width: 100%; /* Asegura que la imagen no exceda el ancho de la tarjeta */
+        height: auto; /* Permite que la altura de la imagen se ajuste automáticamente */
+
+    }
 </style>
+</html>
