--- a/src/main/webapp/WEB-INF/views/thymeleaf/detalles_alimento.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/detalles_alimento.html
@@ -99,6 +99,41 @@
     </div>
 </div>
 
+<form th:action="@{/diarioAlimentos/agregar}" method="post">
+    <input type="hidden" th:value="${alimento.id}" name="alimentoId" />
+
+    <div class="form-group">
+        <label for="tipoColacion">Comida:</label>
+        <select id="tipoColacion" name="tipoColacion">
+            <option value="DESAYUNO">Desayuno</option>
+            <option value="SNACKS">Snacks</option>
+            <option value="ALMUERZO">Almuerzo</option>
+            <option value="MERIENDA">Merienda</option>
+            <option value="CENA">Cena</option>
+        </select>
+    </div>
+
+    <div class="form-group">
+        <label for="fecha">Fecha:</label>
+        <select id="fecha" name="fecha">
+            <option value="ayer">Ayer</option>
+            <option value="hoy" selected>Hoy</option>
+            <option value="mañana">Mañana</option>
+        </select>
+    </div>
+
+    <div class="form-group">
+        <label for="cantidad">Cantidad:</label>
+        <input type="number" id="cantidad" name="cantidad" min="1" required />
+    </div>
+
+    <button type="submit" name="action" value="guardar">Guardar</button>
+    <button type="submit" name="action" value="actualizar">Actualizar</button>
+    <button type="submit" name="action" value="cancelar">Cancelar</button>
+</form>
+
+
+
 <div th:replace="footer :: footer"></div>
 </body>
 </html>
